[gd_scene load_steps=8 format=3 uid="uid://c4hph52yf8aof"]

[ext_resource type="Script" path="res://Player/player.gd" id="1_083ff"]
[ext_resource type="Script" path="res://Scrpits/interact_raycast.gd" id="2_qst3h"]
[ext_resource type="Texture2D" uid="uid://dgpk0vcgxi2da" path="res://Textures/progress bar/enemy_health_bar_background_000.png" id="3_hn5nk"]
[ext_resource type="Texture2D" uid="uid://boq86jdbnme7g" path="res://Textures/progress bar/enemy_health_bar_foreground_000.png" id="4_286db"]
[ext_resource type="Texture2D" uid="uid://cy221um61x87t" path="res://Textures/progress bar/enemy_health_bar_000.png" id="5_bvv6t"]
[ext_resource type="Texture2D" uid="uid://dw8tv076ehjtk" path="res://Textures/crosshair001.png" id="6_pcd3i"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_i656p"]

[node name="Player" type="CharacterBody3D" groups=["Player"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
collision_layer = 2
script = ExtResource("1_083ff")
double_jump_activated = false
jump_height = 12.0
second_jump_height = 8.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_i656p")

[node name="Hurtbox" type="Area3D" parent="."]
collision_layer = 2
collision_mask = 8

[node name="CollisionShape3D" type="CollisionShape3D" parent="Hurtbox"]
shape = SubResource("CapsuleShape3D_i656p")

[node name="Head" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)

[node name="Camera3D" type="Camera3D" parent="Head"]

[node name="Interact raycast" type="RayCast3D" parent="Head"]
target_position = Vector3(0, 0, -3)
collision_mask = 4
collide_with_areas = true
script = ExtResource("2_qst3h")

[node name="SpotLight3D" type="SpotLight3D" parent="Head"]
light_color = Color(0.960784, 0.682353, 0.294118, 1)
light_energy = 2.0
spot_range = 9.72274
spot_angle = 67.3274

[node name="Coyote timer" type="Timer" parent="."]
one_shot = true

[node name="UI" type="CanvasLayer" parent="."]

[node name="Stamina bar" type="TextureProgressBar" parent="UI"]
self_modulate = Color(0.995172, 0.873805, 0.727598, 1)
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -333.0
offset_top = -140.0
offset_right = 333.0
offset_bottom = -81.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 4
value = 100.0
nine_patch_stretch = true
texture_under = ExtResource("3_hn5nk")
texture_over = ExtResource("4_286db")
texture_progress = ExtResource("5_bvv6t")

[node name="Crosshair" type="TextureRect" parent="UI"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -36.0
offset_top = -36.0
offset_right = 36.0
offset_bottom = 36.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_pcd3i")

[connection signal="area_entered" from="Hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="body_entered" from="Hurtbox" to="." method="_on_hurtbox_body_entered"]
[connection signal="timeout" from="Coyote timer" to="." method="_on_coyote_timer_timeout"]
